--- a/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletTransactionCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletTransactionCell.xib
@@ -58,6 +58,18 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vw0-hE-BYk">
+                                        <rect key="frame" x="0.0" y="35.5" width="230.5" height="0.0"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="230.5" id="xXE-BX-s8N"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconNextArrow" translatesAutoresizingMaskIntoConstraints="NO" id="3i8-ik-RhG">
@@ -67,7 +79,7 @@
                                     <constraint firstAttribute="width" constant="8" id="wAW-8M-PUd"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dhp-eX-Z1e">
+                            <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dhp-eX-Z1e">
                                 <rect key="frame" x="195" y="21.5" width="87" height="43.5"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sx6-PN-EDm">
@@ -142,6 +154,8 @@
                 <outlet property="currencyIcon" destination="rMc-aT-mO8" id="8da-2S-iAN"/>
                 <outlet property="dateLabel" destination="4ho-1u-9fd" id="G6S-NY-L8Y"/>
                 <outlet property="mainView" destination="fKt-Vb-Zkz" id="sq1-M0-hYG"/>
+                <outlet property="searchLabel" destination="vw0-hE-BYk" id="nhf-Mk-Arc"/>
+                <outlet property="searchLabelWidth" destination="xXE-BX-s8N" id="Tk6-wr-sXy"/>
                 <outlet property="statusLabel" destination="Jwt-9z-uRX" id="9tg-pS-q6I"/>
                 <outlet property="typeLabel" destination="cfi-41-SbP" id="Q8I-4B-jjr"/>
             </connections>
